# RL-Games

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  main.py  mypy.ini  pyproject.toml
scripts/: download_assets.sh  download_weights.sh
src/: __main__.py
src/agents/: __init__.py  base_agent.py  dummy_agent.py
src/agents/actor_critic/: __init__.py  agent.py  trajectory_buffer.py
src/agents/policy_gradient/: __init__.py  actor_critic.py  ppo.py  trajectory_buffer.py
src/games/: __init__.py  base_frame_renderer.py  base_game.py  base_pygame_renderer.py  base_renderer.py  create_game_and_renderer.py  create_game_engine.py  gui.py  registry.py
src/games/flappy_bird/: __init__.py  bird.py  frame_renderer.py  game.py  obstacle.py  pygame_renderer.py  renderer.py  utils.py
src/games/pacman/: __init__.py  board.py  game.py  ghost.py  pacman.py  pygame_renderer.py  utils.py
src/games/racecar/: __init__.py  car.py  (+3 more)
src/gui/: __main__.py  gui.py  gui_config.py  slider.py
src/players/: __init__.py  ai_player.py  base_player.py  human_player.py
src/training/: .gitignore  train.py
src/utils/: colors.py
src_rl/: __main__.py
src_rl/agents/: base_agent.py  dummy_agent.py
src_rl/experiments/: .gitignore  train.py
src_rl/games/: __init__.py  base_game.py  base_game_engine.py  base_renderer.py  create_game_engine.py  gui.py  gui_config.py
src_rl/gui/: __main__.py  gui.py  gui_config.py  slider.py
src_rl/players/: ai_player.py  base_player.py  event_handler.py  human_player.py
src_rl/training/: .gitignore  train.py
src_rl/utils/: colors.py  gui.py
(+26 files in other folders)
