[project]
name = "rl-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pygame>=2.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
]

[tool.mypy]
strict = true
warn_unused_ignores = true